@@ -1,3 +1,8 @@
+2011-08-18  6.7.1-9 Glenn Randers-Pehrson <glennrp@image...>
+  * When writing a PNG8 and more than one transparent color is present,
+  merge them into the image->background_color (Reference
+http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=19329).
+
 2011-08-18  6.7.1-8 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.1-8.
 
